# utopia-documents

./: CMakeLists.txt  README.md  configure
cinema6/: CMakeLists.txt  alignmentviewwindow.cpp  alignmentviewwindow.h  alignmentviewwindow.ui  main.cpp
data/ontologies/: CMakeLists.txt  bibo.nt  go_daily-termdb.rdf-xml.bz2  mygrid.nt  owl.nt  utopia_domain.nt  utopia_domain.owl  utopia_domain.pprj  utopia_domain.repository  utopia_system.nt  utopia_system.owl  utopia_system.pprj
dependencies/: CMakeLists.txt  VERSIONS  build_BJam  build_Boost  build_CSSSelect  build_Expat  build_FontConfig  build_Freetype  build_GLEW  build_GraphicsMagick  build_Jpeg  build_LXML  build_OpenSSL  build_PCRE  build_Pillow  build_Poppler  build_Python  build_QGLViewer  build_Qt  build_SUDS  build_Setuptools  build_Zlib  buildutils.sh  dependencies.cmake.in  dependencies.env.in  dependencies.h.in  donotbuild_Graphviz
dependencies/CMakeConfig/configurations/: Darwin-10.10.txt  Darwin-10.11.txt  Darwin-10.6.txt  Darwin-10.7.txt  Darwin-10.8.txt  Darwin-10.9.txt  Darwin.txt  Linux.txt  Win32.txt  common.txt
libcrackle/crackle/: CMakeLists.txt  CrackleFontInfo.h  CrackleTextOutputDev.cpp  CrackleTextOutputDev.h  ImageCollection.h  PDFCursor.h  PDFDocument.cpp  PDFDocument.h  PDFFont.cpp  PDFFont.h  PDFFontCollection.cpp  PDFFontCollection.h  PDFPage.cpp  PDFPage.h  PDFTextBlock.cpp  PDFTextBlock.h  PDFTextBlockCollection.h  PDFTextCharacter.cpp  PDFTextCharacter.h  PDFTextCharacterCollection.h  PDFTextLine.cpp  PDFTextLine.h  PDFTextLineCollection.h  PDFTextRegion.cpp  PDFTextRegion.h  PDFTextRegionCollection.h  PDFTextWord.cpp  PDFTextWord.h  PDFTextWordCollection.h  SimpleCollection.h  crackle.h  crackleapi.cpp  crackleapi.h  xpdfapi.h
libcrackle/crackle/libpoppler-compat/: aconf.h
libcrackle/crackle/libpoppler-compat/goo/: GList.h  GString.h
libcrackle/crackle/libxpdf/: CMakeLists.txt  GlobalParams.cc  aconf.h
libgtl/gtl/: CMakeLists.txt  algorithm.h  color.h  common.h  complex.h  config.h  extent.h  extrusion.h  functional.h  gl.h  gtl.h  interpolation.h  matrix.h  orientation.h  quaternion.h  scale.h  shader.cpp  shader.h  shader2.h  triple.h  types.h  vector.h  vertexbuffer.cpp  vertexbuffer.h  vertexbuffer.new.h
libgtl/gtl/bits/: make_swizzles.sh  matrix2.h  matrix3.h  matrix4.h  orientation2.h  orientation3.h  rgb_swizzles.h  rgba_swizzles.h  scale2.h  scale3.h  vector2.h  vector3.h  vector4.h  xy_swizzles.h  xyz_swizzles.h  xyzw_swizzles.h
libgtl/gtl/color/: CMY.h  HSV.h  Lab.h  RGB.h  XYZ.h  YIQ.h  YUV.h  spaces.h
libgtl/gtl/gl/: matrix.h  rotation.h  scale.h  types.h  vertex.h
libpapyro/papyro/: CMakeLists.txt  abstractbibliography.h  abstractfilter.cpp  abstractfilter.h  abstractprocessor.cpp  abstractprocessor.h  aggregatingproxymodel.cpp  aggregatingproxymodel.h  aggregatingproxymodel_p.h  annotationprocessor.cpp  annotationprocessor.h  annotationprocessoraction.cpp  annotationprocessoraction.h  annotationresultitem.cpp  annotationresultitem.h  annotationresultitem_p.h  annotator.cpp  annotator.h  annotatorrunnable.cpp  annotatorrunnable.h  annotatorrunnablepool.cpp  annotatorrunnablepool.h  annotatorrunnablepool_p.h  articledelegate.cpp  articledelegate.h  articleview.cpp  articleview.h  articleview_p.h  bibliographicmimedata.cpp  bibliographicmimedata_p.h  bibliographicsearchbox.cpp  bibliographicsearchbox.h  bibliographicsearchbox_p.h  bibliography.cpp  bibliography.h  bibliography_p.h  cJSON.c  cJSON.h  capabilities.cpp  capabilities.h  (+140 more)
libpapyro/papyro/citeproc/: CMakeLists.txt  citeproc.js  xmljson.js
libpapyro/papyro/citeproc/locales/: af-ZA.json  ar-AR.json  bg-BG.json  ca-AD.json  cs-CZ.json  da-DK.json  de-AT.json  (+42 more)
libpapyro/papyro/cslengine/: cslengine.js
libpapyro/papyro/pages/: reset.css  results.css  results.html  results.js  results.scss
libspine/spine/: Annotation.cpp  Annotation.h  Area.cpp  Area.h  Block.h  BoundingBox.h  CMakeLists.txt  Capability.h  Character.cpp  Character.h  Color.h  Cursor.h  Document.cpp  Document.h  Image.h  Line.h  Page.h  Region.h  Selection.h  TextAnnotationProxy.h  TextIterator.h  TextSelection.cpp  TextSelection.h  Word.h  annotator.h  fingerprint.cpp  fingerprint.h  spine.h  spineapi.cpp  spineapi.h  spineapi_internal.h  utility.h
libutopia2/plugins/python/: CMakeLists.txt  coda_network.pth  conversion.cpp  conversion.h  interpreter.cpp  interpreter.h  pyannotator.h  pyconfigurator.h  pydecorator.h  pyextension.h  pylinkfinder.h  pyoverlayrenderermapper.h  pyphraselookup.h  pyremotequery.h  pyresolver.h  python.cpp  pyvisualiser.h
libutopia2/utopia2/: CMakeLists.txt  aminoacid.cpp  aminoacid.h  bus.cpp  bus.h  bus_p.h  busagent.cpp  busagent.h  certificateerrordialog.cpp  certificateerrordialog.h  certificateerrordialog_p.h  config.h  configurable.cpp  configurable.h  configuration.cpp  configuration.h  configuration_p.h  element.cpp  element.h  encryption.cpp  encryption.h  enums.h  extension.h  extensionfactory.h  extensionlibrary.cpp  extensionlibrary.h  fileformat.cpp  fileformat.h  functional.cpp  functional.h  global.cpp  global.h  hashmap.h  initializer.cpp  initializer.h  invocation.cpp  invocation.h  invocationset.cpp  invocationset.h  library.cpp  (+46 more)
libutopia2/utopia2/assets/: certificate.html
libutopia2_qt/utopia2/qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  abstractcommentdata.h  abstractwidget.cpp  abstractwidget.h  abstractwindow.cpp  abstractwindow.h  abstractwindow_p.h  actionproxy.cpp  actionproxy.h  actionproxy_p.h  bubble.h  cache.h  cacheditem.h  closebutton.cpp  closebutton.h  combinedwidget.cpp  combinedwidget.h  config.h  configurator.cpp  configurator.h  elidedlabel.cpp  elidedlabel.h  embeddedwidget.cpp  embeddedwidget.h  fieldeditor.cpp  fieldeditor.h  filedialog.cpp  filedialog.h  filefixerdialog.cpp  filefixerdialog.h  filefixerdialog.ui  fileformatdialog.cpp  fileformatdialog.h  fileformatdialog.ui  flowbrowser.cpp  flowbrowser.h  flowbrowser_p.h  hidpi.cpp  (+68 more)
papyro/: CMakeLists.txt  Utopia.rc  UtopiaDocuments.desktop  documents.icns  main.cpp  qtlocalpeer.cpp  utopia.plist.in
(+557 files in other folders)
